# kilometrage

./: .env.example  Dockerfile  Makefile  pyproject.toml
.github/workflows/: ci.yml
src/route_compare/: config.py  main.py  models.py
src/route_compare/cost/: fuel.py  tollguru.py  tolls.py
src/route_compare/export/: deep_links.py  waypoints.py
src/route_compare/llm/: narrator.py
src/route_compare/routing/: custom_models.py  graphhopper.py
src/route_compare/static/: app.js  index.html  storage.js  style.css
tests/: conftest.py  test_api.py  test_deep_links.py  test_fuel.py  test_graphhopper.py  test_tollguru.py  test_tolls.py
